@@ -1,3 +1,8 @@
+2003-07-06  Wakaba  <w@offweb.ddo.jp>
+
+	* contents.rdf, livehttpheaders.dtd, PageInfo.dtd: Removed.
+	* Makefile, contents.pdf.in, livehttpheaders.dtd.in, PageInfo.dtd.in: New files.
+
 2003-07-05  Wakaba  <w@suika.fam.cx>
 
 	* livehttpheaders.dtd: Sync with 0.6.
